--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,25 @@
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+
+# The Chad PyCharm#
+.idea
+.venv
+*.iml
+out
+gen
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
